<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBlue300">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginTop="13dp"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="25sp"
                style="@style/TextAppearance.AppCompat.Large"/>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:weightSum="2">

        <LinearLayout
            android:background="@drawable/bg_cruved_strock_green1"
            android:id="@+id/btnBill"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/logo_bill" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/bill"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/bg_cruved_strock_green1"
            android:id="@+id/btnContract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/logo_contract" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/contract"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:weightSum="2">

        <LinearLayout
            android:background="@drawable/bg_cruved_strock_green1"
            android:id="@+id/btnService"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/logo_service" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/service"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/bg_cruved_strock_green1"
            android:id="@+id/btnRoom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/logo_room" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/room"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp">

        <LinearLayout
            android:background="@drawable/bg_cruved_strock_green1"
            android:id="@+id/btnNotification"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="80dp"
                    android:src="@drawable/logo_notification"
                    android:layout_marginLeft="15dp"/>

                <ImageView
                    android:id="@+id/imgWarning"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_warning"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/notification"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:weightSum="2">

        <LinearLayout
            android:background="@drawable/bg_cruved_strock_green1"
            android:id="@+id/btnPriceElectric"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/logo_electric" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/electric"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/bg_cruved_strock_green1"
            android:id="@+id/btnPriceWater"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/logo_water" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/water"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>