<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CỘNG HÒA XÃ HỘI CHỦ NGHĨA VIỆT NAM"
                android:textSize="19sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Độc lập - Tự do - Hạnh phúc"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtLine1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="Hà Nội, ngày .... tháng .... năm ...."
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HỢP ĐỒNG THUÊ NHÀ"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luat_nha_nuoc"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtLine2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Hôm nay, ngày.....tháng......năm........., các Bên gồm:"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_management"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtLine3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="BÊN THUÊ (Bên B) :"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtLine4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CMND số: Cơ quan cấp: Ngày cấp:"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtLine5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nơi ĐKTT:"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rules"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtLine6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ngàythángnăm"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rules_2"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Điều 5. Tiền thuê nhà:"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtLine7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  5.1. Tiền Thuê nhà đối với Diện Tích Thuê nêu tại mục 1.1 Điều 1 là:VNĐ/tháng "
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  5.2 Tiền Thuê nhà không bao gồm chi phí sử dụng Diên tích thuê. Mọi chi phí sử dụng Diện tích thuê nhà bao gồm tiền điện, nước, vệ sinh,v.vsẽ do bên B trả theo khối lượng, công suất sử dụng thực tế của Bên B hàng tháng, được tính theo đơn giá của nhà nước.\n\n\n\n\n\n\n\n\n\n"
                android:textSize="14sp"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBlue300">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="10dp"
                android:text="@string/contract"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>